:sparkles: get closest geopoint to x,y position
