# docs/swagger.json
@@ -17,9 +17,88 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/geopoint/closest/to/{latitude}/{longitude}": {
+            "get": {
+                "description": "retrieve the closest geopoint to another geopoint, excluding other geopoints",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Geopoint"
+                ],
+                "summary": "get the closest geopoint",
+                "parameters": [
+                    {
+                        "type": "number",
+                        "description": "latitude",
+                        "name": "latitude",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "number",
+                        "description": "longitude",
+                        "name": "longitude",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "srid to project",
+                        "name": "srid",
+                        "in": "query"
+                    },
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "integer"
+                        },
+                        "collectionFormat": "multi",
+                        "description": "optional ids to exclude from search",
+                        "name": "not[]",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/geopoint.GeoPoint"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrMsg"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrMsg"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrMsg"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrMsg"
+                        }
+                    }
+                }
+            }
+        },
         "/geopoint/{id}": {
             "get": {
-                "description": "retrieve the geopoint in the database using its name",
+                "description": "retrieve the geopoint in the database using its id",
                 "consumes": [
                     "application/json"
                 ],
@@ -620,8 +699,11 @@
                     "type": "integer",
                     "example": 1
                 },
-                "location": {
-                    "$ref": "#/definitions/postgis.Point"
+                "latitude": {
+                    "type": "number"
+                },
+                "longitude": {
+                    "type": "number"
                 },
                 "picture": {
                     "type": "string",
@@ -638,17 +720,6 @@
                 "userId": {
                     "type": "integer",
                     "example": 1
-                }
-            }
-        },
-        "postgis.Point": {
-            "type": "object",
-            "properties": {
-                "x": {
-                    "type": "number"
-                },
-                "y": {
-                    "type": "number"
                 }
             }
         },
